# stegvisaren

./: README.md  pyproject.toml  se.danielnylander.stegvisaren.desktop
.tx/: config
po/: stegvisaren.pot  sv.mo  sv.po
src/stegvisaren/: main.py
